--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "node node_modules/webpack/bin/webpack.js --progress --colors",
+    "watch": "node node_modules/webpack/bin/webpack.js --progress --colors --watch",
+    "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors",
+    "doc": "node ./node_modules/jsdoc/jsdoc.js -c jsdoc.conf.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/kcomas/timeseries/issues"
   },
-  "homepage": "https://github.com/kcomas/timeseries#readme"
+  "homepage": "https://github.com/kcomas/timeseries#readme",
+  "devDependencies": {
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "jsdoc": "^3.4.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
+  }
 }
