--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "node node_modules/webpack/bin/webpack.js --progress --colors",
     "watch": "node node_modules/webpack/bin/webpack.js --progress --colors --watch",
     "dev": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors",
-    "doc": "node ./node_modules/jsdoc/jsdoc.js -c jsdoc.conf.json",
+    "doc": "node ./node_modules/jsdoc/jsdoc.js -c jsdoc.config.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,8 +24,15 @@
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "css-loader": "^0.23.1",
     "jsdoc": "^3.4.0",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.1.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "d3": "^3.5.17"
   }
 }
